# rust-ramp-up

projects/: notes.md  questions.md  to-dos.md
projects/bullet-hell/: Cargo.toml  kimi_design_doc.md
projects/bullet-hell/assets/: projectiles.ron
projects/bullet-hell/src/: data.rs  game.rs  input.rs  main.rs  player.rs  projectile.rs  projectile_gen.rs  rendering.rs
projects/christmas-carol/src/: lyrics.txt  main.rs
projects/fahrenheit-to-celsius/: Cargo.toml
projects/fahrenheit-to-celsius/src/: main.rs
projects/fibonacci/src/: main.rs
projects/rinha-de-neopets/: Cargo.toml  README.md  colosseum_low_level_design.md  test_battle.rs
projects/rinha-de-neopets/assets/: accumulated_bets.json  bets.json  complete_battles.json  done.json  events_and_odds.json  expired_bets.json  neopets.json  pending_battles.json
projects/rinha-de-neopets/macro_workshop/: Cargo.toml
projects/rinha-de-neopets/macro_workshop/src/: lib.rs
projects/rinha-de-neopets/src/: battle.rs  cassino.rs  cassino_display.rs  display.rs  lib.rs  main.rs  neopets.rs  storage.rs  utils.rs
