[package]
name = "rinha-de-neopets"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
colored = "2.1.0"
indicatif = "0.17.8"
clap = { version = "4.5.53", features = ["derive"] }
dialoguer = "0.12.0"
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
tempfile = "3.23.0"


